--- a/docs/configs.json
+++ b/docs/configs.json
@@ -1,25 +1,38 @@
 {
   "Default": {
-    "aimbot_fov_percentage": 0.12,
-    "dead_zone_radius": 8,
-    "trigger_bot": true,
+    "aimbot_fov": 0.25,
+    "dead_zone": 0.03,
+    "smoothness": 0.3,
+    "trigger_bot": false,
     "classes": [
       1,
       3
     ]
   },
   "Closet": {
-    "aimbot_fov_percentage": 0.16,
-    "dead_zone_radius": 10,
+    "aimbot_fov": 0.08,
+    "dead_zone": 0.01,
+    "smoothness": 0.25,
     "trigger_bot": false,
     "classes": [
-      0,
-      2
+      1,
+      3
     ]
   },
   "Aggressive": {
-    "aimbot_fov_percentage": 1.0,
-    "dead_zone_radius": 6,
+    "aimbot_fov": 1.0,
+    "dead_zone": 0.03,
+    "smoothness": 0.05,
+    "trigger_bot": true,
+    "classes": [
+      1,
+      3
+    ]
+  },
+  "Trigger": {
+    "aimbot_fov": 0.05,
+    "dead_zone": 0.05,
+    "smoothness": 0.01,
     "trigger_bot": true,
     "classes": [
       1,
